--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build":"tsc -b",
-    "start":"node dist/inde.js"
+    "start":"node dist/index.js"
   },
   "keywords": [],
   "author": "",
