--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build":"tsc -b",
-    "start":"node dist/index.js"
-  },
+    "dev:docker": "npx prisma migrate dev && node dist/index.js"
+   },
   "keywords": [],
   "author": "",
   "license": "ISC",
